# ReserveAI_MLOps_E2E

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  application.py  entry.sh  main.py  pyproject.toml  requirements-test.txt  requirements.txt  test.py  test2.py
artifacts/models/: lgbm_model.pkl
artifacts/processed/: processed_test.csv  processed_train.csv
config/: config.yaml  model_params.py  paths_config.py
custom_jenkins/: Dockerfile
notebook/: notebook.ipynb
pipeline/: training.py
src/: custom_exception.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
static/: style.css
static/css/: styles.css
static/js/: script.js
templates/: error.html  index.html
tests/: conftest.py  test_application.py  test_model_training.py
utils/: common_functions.py
